# cpypy

./: README.md  pyproject.toml
scripts/: main.py
src/cpp_lib/: __init__.py  cpp_lib.pyi  lib.cpp
src/cpp_lib/lib_src/: three.cpp  three.h  two.cpp  two.h
